remove scrollbar on slide show, fix displays bugs

--- a/app/assets/stylesheets/layouts/_edit_slide_form.scss
+++ b/app/assets/stylesheets/layouts/_edit_slide_form.scss
@@ -1,7 +1,3 @@
 .optionals{
   align-items: center;
 }
-
-.edit-sound {
-
-}
