--- a/app/assets/stylesheets/layouts/_slideshow.scss
+++ b/app/assets/stylesheets/layouts/_slideshow.scss
@@ -1,6 +1,7 @@
 #narration{
-  max-height: 60vh;
+  max-height: 50vh;
   overflow-y: scroll;
+  &::-webkit-scrollbar{display: none;}
 }
 
 .choices-container {
